force-app/main/default/objects/Opportunity/fields/DatadeInicio__c.field-meta.xml
<CustomField>
    <fullName>DatadeInicio__c</fullName>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>