force-app/main/default/objects/Opportunity/fields/DevSelecionado__c.field-meta.xml
<CustomField>
    <fullName>DevSelecionado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevSelecionado</label>
    <type>Checkbox</type>
</CustomField>