force-app/main/default/objects/Opportunity/fields/Documentos_da_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Documentos_da_Proposta__c</fullName>
    <label>Documentos da Proposta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Não Entregue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>