force-app/main/default/objects/Opportunity/fields/DocumentosAssinados__c.field-meta.xml
<CustomField>
    <fullName>DocumentosAssinados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos Assinados</label>
    <type>Checkbox</type>
</CustomField>