force-app/main/default/objects/Opportunity/fields/TempoEstimado__c.field-meta.xml
<CustomField>
    <fullName>TempoEstimado__c</fullName>
    <label>Tempo Estimado do Projeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>