force-app/main/default/objects/Opportunity/fields/ValorProposta__c.field-meta.xml
<CustomField>
    <fullName>ValorProposta__c</fullName>
    <label>Valor da Proposta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>