force-app/main/default/objects/Opportunity/recordTypes/Projetos.recordType-meta.xml
<RecordType>
    <fullName>Projetos</fullName>
    <active>true</active>
    <businessProcess>Projetos</businessProcess>
    <label>Projetos</label>
</RecordType>