force-app/main/default/objects/Opportunity/validationRules/NaoPermitePularEtapas.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoPermitePularEtapas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  NOT(
    OR(
      AND(
        ISPICKVAL(PRIORVALUE(StageName), &quot;Qualificação&quot;),
        OR(
          ISPICKVAL(StageName, &quot;Negociação&quot;),
          ISPICKVAL(StageName, &quot;Closed Won&quot;),
          ISPICKVAL(StageName, &quot;Closed Lost&quot;)
        )
      ),
      AND(
        ISPICKVAL(PRIORVALUE(StageName), &quot;Negociação&quot;),
        OR(
          ISPICKVAL(StageName, &quot;Formalização&quot;),
          ISPICKVAL(StageName, &quot;Closed Won&quot;),
          ISPICKVAL(StageName, &quot;Closed Lost&quot;)
        )
      ),
      AND(
        ISPICKVAL(PRIORVALUE(StageName), &quot;Formalização&quot;),
        OR(
          ISPICKVAL(StageName, &quot;Closed Won&quot;),
          ISPICKVAL(StageName, &quot;Closed Lost&quot;)
        )
      )
    )
  )
)</errorConditionFormula>
    <errorMessage>Não é permitido pular etapas ou voltar!!</errorMessage>
</ValidationRule>