force-app/main/default/objects/Opportunity/validationRules/ObrigatoriedadeDuranteNegociacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadeDuranteNegociacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Formalização&quot;),
  OR(
    ISBLANK(TempoEstimado__c),
    ISBLANK(CustoEstimadoProjeto__c),
    ISBLANK(ValorProposta__c)
  )
)</errorConditionFormula>
    <errorMessage>Para passar para a próxima etapa é necessário os campos Custo Estimado do Projeto, Tempo Estimado do Projeto e  Valor da Proposta esteja preenchidos.</errorMessage>
</ValidationRule>