force-app/main/default/objects/Opportunity/validationRules/PassarScreenFlow.validationRule-meta.xml
<ValidationRule>
    <fullName>PassarScreenFlow</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  NOT(ISPICKVAL(StageName, &quot;Qualificação&quot;)),							
  OR(
    ISBLANK(DatadeInicio__c),
    ISBLANK(TEXT(Tecnologia_do_Projeto__c)),
				isblank( Email__c )
  )
)</errorConditionFormula>
    <errorMessage>É necessário escolher ao menos um desenvolvedor e preencher os Campos &apos;Data de Início&apos;, &apos;Tecnologia do Projeto&apos; e &apos;Email&apos;</errorMessage>
</ValidationRule>